syntax = "proto3";

package users;

option go_package = "github.com/charoleizer/thuigsinn/ms-users";

service Users {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Read (ReadRequest) returns (ReadResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message CreateResponse {
  string id = 1;
}

message ReadRequest {
  string id = 1;
}

message ReadResponse {
  string username = 1;
  string email = 2;
}

message UpdateRequest {
  string id = 1;
  string username = 2;
  string email = 3;
}

message UpdateResponse {
  string id = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string id = 1;
}